* 0.11.3 (unreleased)
   * Do a better job of updating old save autonav settings
   * Added more checks so tutorial messages don't appear in claimed systems
   * Fixed blinking not breaking stealth
   * Fixed auto-hail message colouring
   * Only do updates with positive delta ticks
   * Fixed cargo disappearing when buying a ship when over the cargo limit
   * Don't let the player trade ships when they have mission cargo
   * Fixed not being able to turn off point defense weapons
   * Fixed Za'lek drone bay being cheaper than the mini-bay
   * Flicker drives can not be stacked and are mutually exclusivel with other blink drives
   * Decreased Nexus Drill Lance mining malus from -80% to -15%
   * Increased all mining yields by roughly 5 times
   * `sciencegonewrong/02_sciwrong`: make the drones not hostile to other factions
   * `neutral/baron_comm`: fixed trivial warning when trying to clean up baron comm event
   * `neutral/wastedump`: fixed getting rid of cargo while landed
   * Translation updates

* 0.11.2
   * Stopped autonav from preventing wobble and overshooting by crashing the entire game

* 0.11.1
   * Give all ammo back to player after doing obelisk
   * Fixed player being invincible after completing an obelisk
   * Fixed a crash when loading games while a landing hook was running
   * Fixed race condition in threadpool
   * Fixed asteroids spawning in not proper shapes
   * Fixed autonav wobble and overshooting
   * Point defense won't shoot at disabled pilots anymore
   * Fixed battery descriptions
   * Discovering a hidden jump will make both directions known
   * Fixed AI trying to scan hostile targets they lost track of
   * Properly save and load reward_value to and from saves
   * Fixed events and missions being able to trigger in obelisk tests
   * Fixed beam weapons not hitting asteroids
   * Properly compute weapon range with launch_range modifiers
   * Fixed some range checks with inrange weapon sets